--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Caprasimo&family=JetBrains+Mono:wght@400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Caprasimo&family=JetBrains+Mono:wght@400;500;700&display=swap');
 :root {
-  font-family: "JetBrains Mono", monospace;
+  font-family: 'JetBrains Mono', monospace;
   --background-light: #e5e5e5;
   --background-dark: #242728;
   font-synthesis: none;
@@ -25,4 +25,13 @@
 
 ::selection {
   background: #e5e5e5;
+}
+
+@view-transition {
+  navigation: auto;
+}
+
+::view-transition-old(root),
+::view-transition-new(root) {
+  animation-duration: 0.3s;
 }
